# hh_parsing

./: json_saver.py  main.py  pyproject.toml  vacancies.json
hh/: hh_api.py  utils.py  vacancy.py
spj/: spj_api.py  spj_utils.py  vacancy_spj.py
src/: hh_api.py  json_saver.py  vacancy.py
